--- a/SortingLibrary/SortingLibrary.csproj
+++ b/SortingLibrary/SortingLibrary.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="HeapSort.cs" />
     <Compile Include="ISort.cs" />
+    <Compile Include="MergeSort.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
